server during 256 seconds.)

The storage token now uses 4 bytes to store the article sequence number
for timecaf, instead of only 2 bytes.  Thanks to Kamil Jonca for the
bug report and also the patch.

=item *

Fixed a bug in both timecaf and timehash which prevented them from working
on systems where short ints were not 16-bit integers.

=item *

A new CNFS version has been introduced by Miquel van Smoorenburg in
the CNFS header.  CNFSv4 uses S<4 KB> blocks instead of S<512 bytes>,
which more particularly makes writes faster.  CNFSv4 supports
files/partitions up to S<16 TB> with a S<4 KB> blocksize.

Existing CNFS buffers are kept unchanged; only new CNFS buffers are
initialized with that new version.

=item *

B<grephistory -l> now returns the contents of the expires history field
as well as the hash of the message-ID.  Besides, when the storage API
token does not exist, B<grephistory -v> now also returns the hash
of the requested message-ID.

=item *

The check on cancel messages when I<verifycancels> is set to true
in F<inn.conf> has been changed to verify that at least one newsgroup
in the cancel message can be found in the article to be cancelled.
This new feature is from Christopher Biedl.

The previous behaviour was to check whether the cancel message is
from the same person as the original post, which is extremely easy
to spoof; besides, RFC 5537 (USEPRO) mentions that "cancel control
messages are not required to contain From: and Sender: header fields
matching the target message.  This requirement only encouraged cancel
issuers to conceal their identity and provided no security".

=item *

The way the C</remember/> line in F<expire.ctl> works has changed.
History retention for an article was done according to its original
arrival time; it is now according to its original posting date.
Otherwise, unnecessary data may be kept too long in the F<history>
file.

To achieve that, the HISremember() function in history API now